tests/machine/x/hs/query_sum_select.error

/workspace/mochi/tests/machine/x/hs/query_sum_select.hs:12:9: error:
    • No instance for (Num (t0 a0)) arising from the literal ‘1’
    • In the expression: 1
      In the expression: [1, 2, 3]
      In an equation for ‘nums’: nums = [1, 2, 3]
   |
12 | nums = [1, 2, 3]
   |         ^

/workspace/mochi/tests/machine/x/hs/query_sum_select.hs:14:11: error:
    • Ambiguous type variable ‘t0’ arising from a use of ‘sum’
      prevents the constraint ‘(Foldable t0)’ from being solved.
      Relevant bindings include
        n :: t0 a0
          (bound at /workspace/mochi/tests/machine/x/hs/query_sum_select.hs:14:19)
      Probable fix: use a type annotation to specify what ‘t0’ should be.
      Potentially matching instances:
        instance Foldable (Either a) -- Defined in ‘Data.Foldable’
        instance Foldable Maybe -- Defined in ‘Data.Foldable’
        ...plus three others
        ...plus 26 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: sum n
      In the expression: [sum n | n <- filter (\ n -> (n > 1)) nums]
      In an equation for ‘result’:
          result = [sum n | n <- filter (\ n -> (n > 1)) nums]
   |
14 | result = [sum n | n <- filter (\n -> (n > 1)) nums]
   |           ^^^

/workspace/mochi/tests/machine/x/hs/query_sum_select.hs:14:41: error:
    • Ambiguous type variables ‘t0’, ‘a0’ arising from a use of ‘>’
      prevents the constraint ‘(Ord (t0 a0))’ from being solved.
      Relevant bindings include
        n :: t0 a0
          (bound at /workspace/mochi/tests/machine/x/hs/query_sum_select.hs:14:33)
        result :: [a0]
          (bound at /workspace/mochi/tests/machine/x/hs/query_sum_select.hs:14:1)
      Probable fix: use a type annotation to specify what ‘t0’,
                                                          ‘a0’ should be.
      Potentially matching instances:
        instance (Ord a, Ord b) => Ord (a, b) -- Defined in ‘GHC.Classes’
        instance (Ord a, Ord b, Ord c) => Ord (a, b, c)
          -- Defined in ‘GHC.Classes’
        ...plus 14 others
        ...plus one instance involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: n > 1
      In the first argument of ‘filter’, namely ‘(\ n -> (n > 1))’
      In the expression: filter (\ n -> (n > 1)) nums
   |
14 | result = [sum n | n <- filter (\n -> (n > 1)) nums]
   |                                         ^

/workspace/mochi/tests/machine/x/hs/query_sum_select.hs:14:43: error:
    • No instance for (Num (t0 a0)) arising from the literal ‘1’
    • In the second argument of ‘(>)’, namely ‘1’
      In the expression: n > 1
      In the first argument of ‘filter’, namely ‘(\ n -> (n > 1))’
   |
14 | result = [sum n | n <- filter (\n -> (n > 1)) nums]
   |                                           ^

/workspace/mochi/tests/machine/x/hs/query_sum_select.hs:18:3: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 25 others
        ...plus 12 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In a stmt of a 'do' block: print (result)
      In the expression: do print (result)
      In an equation for ‘main’: main = do print (result)
   |
18 |   print (result)
   |   ^^^^^


Context around line 12:
   10| import Data.Time.Clock.POSIX (getPOSIXTime)
   11| 
   12| nums = [1, 2, 3]
   13| 
   14| result = [sum n | n <- filter (\n -> (n > 1)) nums]
