tests/machine/x/hs/query_sum_select.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)

nums = [1, 2, 3]

result = [sum n | n <- filter (\n -> (n > 1)) nums]

main :: IO ()
main = do
  print (result)
